2005-11-10  Andy Wingo  <wingo@pobox.com>

	* src/backend/bacon-video-widget-gst-0.10.c
	(bacon_video_widget_class_init): Remove obsolete comment.
	(bacon_video_widget_init): Threads have already been enabled via
	gstreamer.
	(bvw_bus_message_cb): A "message" signal handler should not return
	a value.

	* src/backend/bacon-video-widget-gst-0.10.c (get_media_size)
	(bacon_video_widget_expose_event)
	(bacon_video_widget_button_press)
	(bacon_video_widget_button_release): Don't call GST_STATE on
	elements, (!logo_mode) can only be true in >= PAUSED. Fix some
	refcounting issues.

2005-11-10  Tim-Philipp Müller  <tim at centricular dot net>

	* src/totem-menu.c: (add_device_to_menu):
	  Don't call g_str_has_prefix with NULL string.

2005-11-07  Christian Persch  <chpe@cvs.gnome.org>

	* configure.in:	Allow compilation against xulrunner.
	Patch by Robert O'Callahan <rocallahan@novell.com>. (Closes: #320921)

2005-11-07  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (totem_action_load_media_device): Change the horrible
	error message when we can't determine the CD type (Closes: #320298)

2005-11-04  Tim-Philipp Müller  <tim at centricular dot net>

	* src/totem-private.h:
	* src/totem.c: (seek_slider_pressed_cb), (seek_slider_released_cb):
	  Pause playback while slider is pressed in direct seek mode in 
	  order to prevent audio output while the slider position is being 
	  changed; also fix an instance of dubious g_object_get_data usage.

2005-11-04  Tim-Philipp Müller  <tim at centricular dot net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bacon_video_widget_expose_event), (bacon_video_widget_init),
	(bacon_video_widget_finalize), (bacon_video_widget_get_property),
	(bacon_video_widget_get_video_property),
	(find_colorbalance_element),
	(bvw_update_interface_implementations),
	(bvw_changed_state_msg_sync), (got_new_video_sink_bin_element),
	(bacon_video_widget_new):
	  Fix 'video jumping out of its frame' at EOS; add fallback for